// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogContentText ACT theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1vb67it-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ACT_ET theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1opki06-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-41tkp0-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-t1h31v-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-ipga86-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;

exports[`DialogContentText ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <p
    class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiDialogContentText-root css-1g9hrw4-MuiTypography-root-MuiDialogContentText-root"
  >
    Hey
  </p>
</div>
`;
